[package]
name = "rs_lib_ng"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- CORE ASYNC & RUNTIME ---
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3" # Required for WebSocket StreamExt/SinkExt

# --- SERIALIZATION & DATA ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# --- NETWORKING & PROTOCOLS ---
# REST
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
# WebSockets (Required for Yahoo Streaming)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
# Binary Serialization (Required for Yahoo and justfindata-protocol)
prost = "0.12" 

# --- SECURITY & ENCODING ---
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
base64 = "0.22"
hex = "0.4"

# --- SYSTEM & CONFIGURATION ---
sysinfo = "0.30"
figment = { version = "0.10", features = ["toml", "env", "json"] }
arc-swap = "1.6"
rand = { version = "0.8", features = ["small_rng"] }
reqwest-retry = "0.9.1"
reqwest-middleware = "0.5.1"
futures = "0.3.32"

[dev-dependencies]
wiremock = "0.6"
